lang2/macro/tests/ui/fail/13-abi-constructor.stderr
error: specifying ABI is not allowed in ink! functions
  --> $DIR/13-abi-constructor.rs:12:9
   |
12 |         extern "C" fn invalid_return(&mut self) {}
   |         ^^^^^^^^^^
